fixed animation thresholds on mobile

--- a/style.css
+++ b/style.css
@@ -795,6 +795,7 @@ label {
   .featured-projects {
     padding-top: 30px;
     padding-bottom: 30px;
+    height: fit-content;
   }
 
   .project-name {
